# aft

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aft/: __init__.py  cleaning.py  cli.py  config.py  pipeline.py  recommend.py  ui.py
tests/: conftest.py  test_cleaning.py  test_cli.py  test_config.py  test_recommend.py
